--- a/pricing.html
+++ b/pricing.html
@@ -110,8 +110,99 @@
         }
 
         @media (max-width: 768px) {
+            .pricing-content {
+                padding: 140px 1rem 60px;
+            }
+
+            .pricing-content h1 {
+                font-size: 2rem;
+            }
+
             .pricing-grid {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
+                padding: 0 0.5rem;
+            }
+
+            .pricing-card {
+                padding: 2rem 1.5rem;
+            }
+
+            .pricing-price {
+                font-size: 2.5rem;
+            }
+
+            .pricing-features li {
+                font-size: 0.95rem;
+                padding: 0.6rem 0;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .pricing-content {
+                padding: 120px 0.75rem 40px;
+            }
+
+            .pricing-content h1 {
+                font-size: 1.75rem;
+                margin-bottom: 1rem;
+            }
+
+            .pricing-content>p {
+                font-size: 1rem !important;
+                padding: 0 0.5rem;
+            }
+
+            .pricing-grid {
+                padding: 0;
+                gap: 1rem;
+            }
+
+            .pricing-card {
+                padding: 1.5rem 1rem;
+            }
+
+            .pricing-card h3 {
+                font-size: 1.5rem;
+            }
+
+            .pricing-price {
+                font-size: 2rem;
+                margin: 1rem 0;
+            }
+
+            .pricing-features {
+                margin: 1.5rem 0;
+            }
+
+            .pricing-features li {
+                font-size: 0.9rem;
+                padding: 0.5rem 0;
+                gap: 0.6rem;
+            }
+
+            .pricing-features li i {
+                font-size: 1rem;
+            }
+
+            .pricing-badge {
+                font-size: 0.8rem;
+                padding: 0.4rem 1rem;
+            }
+
+            /* FAQ Section */
+            .feature-card {
+                padding: 1.5rem 1rem !important;
+                margin-left: 0.5rem !important;
+                margin-right: 0.5rem !important;
+            }
+
+            .feature-card h3 {
+                font-size: 1.1rem !important;
+            }
+
+            .feature-card p {
+                font-size: 0.95rem !important;
             }
         }
     </style>
@@ -142,7 +233,8 @@
         <p
             style="text-align: center; font-size: 1.2rem; max-width: 700px; margin: 0 auto 3rem; color: var(--text-muted);">
             Choose the plan that works for you. All plans include full access to rankings, matchmaking, and community
-            features.</p>
+            features.
+        </p>
 
         <div class="pricing-grid">
             <!-- Monthly Plan -->
@@ -194,20 +286,26 @@
 
             <div class="feature-card" style="margin-bottom: 1.5rem;">
                 <h3 style="color: var(--primary); margin-bottom: 1rem;">Can I cancel anytime?</h3>
-                <p style="color: var(--text-muted); margin: 0;">Absolutely. You can cancel your subscription at any time
-                    from your account settings. No questions asked.</p>
+                <p style="color: var(--text-muted); margin: 0;">
+                    Absolutely. You can cancel your subscription at any time from your account settings. No questions
+                    asked.
+                </p>
             </div>
 
             <div class="feature-card" style="margin-bottom: 1.5rem;">
                 <h3 style="color: var(--primary); margin-bottom: 1rem;">What payment methods do you accept?</h3>
-                <p style="color: var(--text-muted); margin: 0;">We accept all major credit cards, debit cards, and
-                    mobile payment methods through the App Store and Google Play.</p>
+                <p style="color: var(--text-muted); margin: 0;">
+                    We accept all major credit cards, debit cards, and mobile payment methods through the App Store and
+                    Google Play.
+                </p>
             </div>
 
             <div class="feature-card" style="margin-bottom: 1.5rem;">
                 <h3 style="color: var(--primary); margin-bottom: 1rem;">Can I switch between plans?</h3>
-                <p style="color: var(--text-muted); margin: 0;">Yes! You can upgrade or downgrade your plan at any time.
-                    Changes will be reflected in your next billing cycle.</p>
+                <p style="color: var(--text-muted); margin: 0;">
+                    Yes! You can upgrade or downgrade your plan at any time. Changes will be reflected in your next
+                    billing cycle.
+                </p>
             </div>
         </div>
     </div>
@@ -218,7 +316,10 @@
             <div class="cta-card">
                 <div style="position: relative; z-index: 2;">
                     <h2>Ready to Elevate Your Game?</h2>
-                    <p style="max-width: 600px; margin: 1rem auto 2rem; color: #cbd5e1;">Join thousands of players who are already tracking their progress and finding better matches with RacketRank.</p>
+                    <p style="max-width: 600px; margin: 1rem auto 2rem; color: #cbd5e1;">
+                        Join thousands of players who are already tracking their progress and finding better matches
+                        with RacketRank.
+                    </p>
                     <a href="download.html" class="btn btn-primary">Get Started</a>
                 </div>
             </div>
@@ -267,7 +368,6 @@
             </div>
         </div>
     </footer>
-
 
 </body>
 
