--- a/download.html
+++ b/download.html
@@ -193,7 +193,7 @@
                     </p>
                 </div>
                 <div class="hero-image" style="display: flex; justify-content: center; align-items: center;">
-                    <img src="assets/applogo.png" alt="RacketRank App Logo"
+                    <img src="assets/phone.png" alt="RacketRank App Logo"
                         style="max-width: 300px; border: none; box-shadow: none; animation: float 6s ease-in-out infinite;">
                 </div>
             </div>
